# arm_control

./: .gitignore  CMakeLists.txt  manifest.xml  package.xml
action/: MoveArm.action  MoveJoints.action  MoveTool.action
data/: example_path.yaml  line_high.yaml  line_low.yaml  line_middle.yaml  middle_pose.yaml  square.yaml  square_360.yaml  square_360_down.yaml  square_init.yaml
include/arm_control/: exceptions.h  melfa.h  robot_pose.h
include/melfa/: exceptions.h  joint_state.h  melfa.h  robot_pose.h  tool_pose.h
include/melfa_ros/: conversions.h  robot_path.h
launch/: arm_control.launch
src/: melfa.cpp  serialcomm.cpp
src/melfa/: #melfa.cpp#  .#melfa.cpp  joint_state.cpp  melfa.cpp  robot_pose.cpp  tool_pose.cpp
src/melfa_ros/: conversions.cpp  robot_path.cpp
src/nodes/: arm_control_node.cpp  arm_navigator_node.cpp  execute_node.cpp  follow_path.cpp  follow_path_node.cpp
src/serial/: serialcomm.cpp
src/tools/: batch_execute.cpp  batch_send_raw.cpp  create_pose_msg.cpp  execute.cpp  move.cpp  run_program.cpp  send_raw.cpp
srv/: SetTool.srv
test/: melfa_ros_test.cpp
